# Projet_Compression_M1

./: .gitignore  CMakeLists.txt  Makefile  README.md  _  build.sh  ck_  compres  compressed  compressed.img  corsica.ppm  decompressed.ppm  huffman.c  imgui.ini  k_  lock_  oche.ppm  ock_  out  results.csv
image_presentation/: city_compressed.img  wall_compressed.img
img/: TeaPot16.ppm  TeaPot32.ppm  TeaPot64.ppm  TeaPot8.ppm  corsica128.ppm  corsica32.ppm  sample512.ppm  steve_128.ppm  steve_16.ppm
include/: FlexibleCompression.h  FormatSamplingBlur.h  Huffman.h  JPEG.h  JPEG2000.h  LZ77.h  RLE.h  TransformationQuantification.h  Utils.h
libs/SDL3/: .gitignore
src/: FlexibleCompression.cpp  FormatSamplingBlur.cpp  Huffman.cpp  Huffman.h  ImageBase.cpp  JPEG.cpp  JPEG.h  JPEG2000.cpp  JPEG2000.h  LZ77.cpp  RLE.cpp  RLE.h  TransformationQuantification.cpp  Utils.cpp  Utils.h  main.cpp
src/imgui/: imgui_impl_sdlrenderer3.cpp
